# icra2020locomanipulation

./: CMakeLists.txt  LICENSE.md  README.md  bag_lift_turn_putdown_trajectory.yaml  cart_hand_trajectory.yaml  core  custom_hand_lift_turn_trajectory.yaml  custom_hand_trajectory.yaml  door_open_trajectory.yaml  out.txt  package.xml  right_hand_feasibility.yaml  right_hand_standardized_feasibility.yaml  sample_emission.yaml  valkyrie_sim_bringup.txt
cmake/: config.h.cmake
customYamlParser/: CMakeLists.txt
customYamlParser/src/: binary.cpp  collectionstack.h  convert.cpp  directives.cpp  directives.h  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exceptions.cpp  exp.cpp  exp.h  indentation.h  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  nodebuilder.h  nodeevents.cpp  nodeevents.h  null.cpp  ostream_wrapper.cpp  parse.cpp  parser.cpp  ptr_vector.h  regex_yaml.cpp  regex_yaml.h  regeximpl.h  scanner.cpp  scanner.h  scanscalar.cpp  scanscalar.h  scantag.cpp  scantag.h  scantoken.cpp  setting.h  simplekey.cpp  (+9 more)
customYamlParser/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
data_1m_around_origin/: right_hand_feasibility.yaml  right_hand_standardized_feasibility.yaml
data_generation_yaml_configurations/: both_hands_left_stance.yaml  both_hands_right_stance.yaml  left_hand_left_stance.yaml  left_hand_right_stance.yaml  right_hand_left_stance.yaml  right_hand_right_stance.yaml
hand_trajectory/: bag_lift_putdown_parameters.yaml  bag_lift_turn_putdown_trajectory.yaml  cart_hand_trajectory.yaml  cart_left_hand_trajectory.yaml  cart_parameters.yaml  cart_right_hand_trajectory.yaml  door_opening_parameters.yaml  door_trajectory.yaml  solar_panel_trajectory.yaml
include/: .gitignore
launch/: display_cart.launch  launch_test_ik_module.launch  (+29 more)
nodes/: CMakeLists.txt  classifier_client_node.cpp  node_transition_space_visualization.cpp  node_visualize_cart.cpp  node_visualize_door.cpp  planner_cart_push_neural_net_node.cpp  planner_cart_push_node.cpp  planner_door_open_neural_net_node.cpp  planner_door_open_node.cpp
nodes/planner_nodes/: CMakeLists.txt  planner_cart_push_neural_net_node.cpp  planner_cart_push_node_different_cost.cpp  planner_door_open_neural_net_node.cpp  planner_door_open_node.cpp  planner_door_open_node_different_cost.cpp
nodes/reachability_regions/: CMakeLists.txt  node_viz_foot_reachability.cpp  node_viz_hand_reachability.cpp  node_viz_lm_contact_transition_space.cpp  node_viz_lm_ee_space.cpp
nodes/visualization_nodes/: CMakeLists.txt  node_visualize_bag.cpp  node_visualize_door.cpp
test/: CMakeLists.txt  feasibility.cpp  feasibility.hpp  gmm_viz_lfrh.cpp  launch_test_rviz_val_cart_visualization.launch  pinocchio_unittest_geom_simpleboxes.cpp  test_appendGeometry.cpp  test_astar_planner.cpp  test_boxbox_computeDistance.cpp  test_boxrobot.cpp  test_collision_environment.cpp  test_collision_module.cpp  test_computeCollision.cpp  test_computeDistance.cpp  test_config_trajectory_generator.cpp  test_correct_append.cpp  test_directedvectors_case_incollision.cpp  test_footstep_data_gen.cpp  test_get_nearest_point_vectors.cpp  test_gmm_arm_fit.cpp  test_gmm_config_fit.cpp  test_gmm_fit.cpp  test_gmm_left_foot.cpp  test_gmm_main_viz.cpp  test_ik_module.cpp  test_ik_objectcollision.cpp  test_ik_pointcollision.cpp  test_ik_selfcollision.cpp  test_interpolation_module.cpp  test_load_and_viz.cpp  test_load_urdf_model.cpp  test_mihir_working_file.cpp  test_multiple_selfcollision.cpp  test_planner_with_trajectories.cpp  test_prioritized_ik.cpp  test_removeCollisionPairs.cpp  test_rviz_val_cart.cpp  test_rviz_valkyrie.cpp  test_simpleboxes.cpp  test_tasks.cpp  (+6 more)
test/collision_test_files/: CMakeLists.txt  test_buildModel_append.cpp  test_collision_environment.cpp  test_minimal_working_example.cpp  test_multiple_selfcollision.cpp
test/feasibility_test_files/: CMakeLists.txt  right_hand_right_foot_s95_1.yaml  test_cpp_nn_generate_standardize_viz_data.cpp  test_feasibility_data_generation.cpp  test_feasibility_data_playback.cpp  test_generate_data.cpp  test_generate_visualization_feasibility_data.cpp  test_python_classifier_viz_swing_foot_feas_region_with_val.cpp  test_standardize_viz_data.cpp  test_visualize_stand_feas_data.cpp  test_viz_swing_foot_feas_region_with_val.cpp
test/gmm_test_files/: CMakeLists.txt  gmm_left_foot_both_hand.cpp  gmm_left_foot_right_hand.cpp  gmm_rfrh_foot_viz.cpp  gmm_right_foot_both_hand.cpp  gmm_right_foot_left_hand.cpp  gmm_right_foot_right_hand.cpp  gmm_viz_rfbh.cpp  gmm_viz_rflh.cpp  gmm_viz_rfrh.cpp  test_footstep_data_gen.cpp  test_generate_rand_arm.cpp  test_gmm_arm_fit.cpp  test_gmm_arm_fit_1D.cpp  test_gmm_config_fit.cpp  test_gmm_viz.cpp  test_viz_feasibility.cpp
test/hand_trajectory_test_files/: CMakeLists.txt  test_generate_cart_hand_trajectory.cpp  test_generate_door_opening_hand_trajectory.cpp  test_generate_general_hand_trajectory.cpp  test_generate_lifting_and_turning_hand_trajectory.cpp  test_visualize_val_and_custom_trajectory.cpp  test_visualize_val_and_door_open_trajectory.cpp  test_visualize_val_and_lift_turn_trajectory.cpp
test/helpers_test_files/: CMakeLists.txt  test_cpp_NN.cpp  test_data_saver.cpp  test_rkf45.cpp
test/ik_module_test_files/: CMakeLists.txt  generate_init_cart_configuration.cpp  generate_init_configuration.cpp  test_config_trajectory_generator.cpp  test_foot_generate_picture.cpp  test_foot_generate_picture_no_hand.cpp  test_hand_generate_picture.cpp  test_hand_ik_convergence_picture.cpp  test_hand_in_place_nn_check.cpp  test_ik_module.cpp  test_ik_multipleobject.cpp  test_ik_multipleobject_idea1.cpp  test_ik_objectcollision.cpp  test_ik_self_object.cpp
test/interpolation_test_files/: CMakeLists.txt  test_visualize_panel_waypoints.cpp
test/model_test_files/: CMakeLists.txt  test_get_worldframepose_for_nn_classifier.cpp
test/planner_test_files/: CMakeLists.txt  test_footstep_planner.cpp  test_planner_with_trajectories.cpp  test_vector_operations.cpp
test/task_test_files/: CMakeLists.txt
(+254 files in other folders)
