<?xml version="1.0"?>
<package format="2">
  <name>avatar_locomanipulation</name>
  <version>0.0.0</version>
  <description>The avatar_locomanipulation package</description>

  <maintainer email="stevenjj@utexas.edu">Steven Jens Jorgensen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigenpy</depend>
  <depend>pinocchio</depend>
  <depend>hpp-fcl</depend>
  <depend>urdf</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospkg</depend>

</package>
