<?xml version="1.0"?>
<package format="2">
  <name>avatar_locomanipulation</name>
  <version>0.0.0</version>
  <description>The avatar_locomanipulation package</description>

  <maintainer email="stevenjj@utexas.edu">Steven Jens Jorgensen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigenpy</depend>
  <depend>pinocchio</depend>
  <depend>hpp-fcl</depend>
  <depend>urdf</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz</depend>

  <depend>std_msgs</depend>
  <depend>rospkg</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
