add_executable(test_load_urdf_model test_load_urdf_model.cpp)
add_executable(test_valkyrie_model test_valkyrie_model.cpp ${PROJECT_SOURCES})
add_executable(test_walking_pattern_generator test_walking_pattern_generator.cpp ${PROJECT_SOURCES})
add_executable(test_simpleboxes test_simpleboxes.cpp ${PROJECT_SOURCES})
add_executable(test_computeCollision test_computeCollision.cpp ${PROJECT_SOURCES})
add_executable(test_computeDistance test_computeDistance.cpp ${PROJECT_SOURCES})
add_executable(test_boxbox_computeDistance test_boxbox_computeDistance.cpp ${PROJECT_SOURCES})

target_link_libraries(test_load_urdf_model ${catkin_LIBRARIES})
target_link_libraries(test_valkyrie_model  ${catkin_LIBRARIES})
target_link_libraries(test_walking_pattern_generator ${catkin_LIBRARIES})
target_link_libraries(test_simpleboxes ${catkin_LIBRARIES})
target_link_libraries(test_computeCollision ${catkin_LIBRARIES})
target_link_libraries(test_computeDistance ${catkin_LIBRARIES})
target_link_libraries(test_boxbox_computeDistance ${catkin_LIBRARIES})
