
# Add which test file subdirectory to compile
add_subdirectory(collision_test_files)
add_subdirectory(feasibility_test_files)
add_subdirectory(gmm_test_files)
add_subdirectory(helpers_test_files)
add_subdirectory(ik_module_test_files)
add_subdirectory(model_test_files)
add_subdirectory(interpolation_test_files)
add_subdirectory(planner_test_files)
add_subdirectory(task_test_files)

