# add_executable(test_appendGeometry test_appendGeometry.cpp ${PROJECT_SOURCES})
# add_executable(test_boxbox_computeDistance test_boxbox_computeDistance.cpp ${PROJECT_SOURCES})
# add_executable(test_boxrobot test_boxrobot.cpp ${PROJECT_SOURCES})
# add_executable(test_collision_environment test_collision_environment.cpp ${PROJECT_SOURCES})
# add_executable(test_computeCollision test_computeCollision.cpp ${PROJECT_SOURCES})
# add_executable(test_computeDistance test_computeDistance.cpp ${PROJECT_SOURCES})
# add_executable(test_directedvectors_case_incollision test_directedvectors_case_incollision.cpp ${PROJECT_SOURCES})
# add_executable(test_multiple_selfcollision test_multiple_selfcollision.cpp ${PROJECT_SOURCES})
# add_executable(test_removeCollisionPairs test_removeCollisionPairs.cpp ${PROJECT_SOURCES})
# add_executable(test_simpleboxes test_simpleboxes.cpp ${PROJECT_SOURCES})

# target_link_libraries(test_appendGeometry ${PROJECT_LIBRARIES})
# target_link_libraries(test_boxbox_computeDistance ${PROJECT_LIBRARIES})
# target_link_libraries(test_boxrobot ${PROJECT_LIBRARIES})
# target_link_libraries(test_collision_environment ${PROJECT_LIBRARIES})
# target_link_libraries(test_computeCollision ${PROJECT_LIBRARIES})
# target_link_libraries(test_computeDistance ${PROJECT_LIBRARIES})
# target_link_libraries(test_directedvectors_case_incollision ${PROJECT_LIBRARIES})
# target_link_libraries(test_multiple_selfcollision ${PROJECT_LIBRARIES})
# target_link_libraries(test_removeCollisionPairs ${PROJECT_LIBRARIES})
# target_link_libraries(test_simpleboxes ${PROJECT_LIBRARIES})