# add_executable(gmm_left_foot_right_hand gmm_left_foot_right_hand.cpp ${PROJECT_SOURCES})
# add_executable(gmm_left_foot_both_hand gmm_left_foot_both_hand.cpp ${PROJECT_SOURCES})
# add_executable(gmm_rfrh_foot_viz gmm_rfrh_foot_viz.cpp ${PROJECT_SOURCES})
# add_executable(gmm_right_foot_both_hand gmm_right_foot_both_hand.cpp ${PROJECT_SOURCES})
# add_executable(gmm_right_foot_left_hand gmm_right_foot_left_hand.cpp ${PROJECT_SOURCES})
# add_executable(gmm_right_foot_right_hand gmm_right_foot_right_hand.cpp ${PROJECT_SOURCES})
# add_executable(gmm_viz_lfrh gmm_viz_lfrh.cpp ${PROJECT_SOURCES})
# add_executable(gmm_viz_rfbh gmm_viz_rfbh.cpp ${PROJECT_SOURCES})
# add_executable(gmm_viz_rflh gmm_viz_rflh.cpp ${PROJECT_SOURCES})
# add_executable(gmm_viz_rfrh gmm_viz_rfrh.cpp ${PROJECT_SOURCES})
# add_executable(test_footstep_data_gen test_footstep_data_gen.cpp ${PROJECT_SOURCES})
# add_executable(test_generate_rand_arm test_generate_rand_arm.cpp ${PROJECT_SOURCES})
# add_executable(test_gmm_arm_fit test_gmm_arm_fit.cpp ${PROJECT_SOURCES})
# add_executable(test_gmm_config_fit test_gmm_config_fit.cpp ${PROJECT_SOURCES})
# add_executable(test_gmm_fit test_gmm_fit.cpp ${PROJECT_SOURCES})
# add_executable(test_gmm_left_foot test_gmm_left_foot.cpp ${PROJECT_SOURCES})
# add_executable(test_gmm_main_viz test_gmm_main_viz.cpp ${PROJECT_SOURCES})
# add_executable(test_gmm_viz test_gmm_viz.cpp ${PROJECT_SOURCES})
# add_executable(test_viz_feasibility test_viz_feasibility.cpp ${PROJECT_SOURCES})

# target_link_libraries(gmm_left_foot_right_hand ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_left_foot_both_hand ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_rfrh_foot_viz ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_right_foot_both_hand ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_right_foot_left_hand ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_right_foot_right_hand ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_viz_lfrh ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_viz_rfbh ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_viz_rflh ${PROJECT_LIBRARIES})
# target_link_libraries(gmm_viz_rfrh ${PROJECT_LIBRARIES})
# target_link_libraries(test_footstep_data_gen ${PROJECT_LIBRARIES})
# target_link_libraries(test_generate_rand_arm ${PROJECT_LIBRARIES})
# target_link_libraries(test_gmm_arm_fit ${PROJECT_LIBRARIES})
# target_link_libraries(test_gmm_config_fit ${PROJECT_LIBRARIES})
# target_link_libraries(test_gmm_fit ${PROJECT_LIBRARIES})
# target_link_libraries(test_gmm_left_foot ${PROJECT_LIBRARIES})
# target_link_libraries(test_gmm_main_viz ${PROJECT_LIBRARIES})
# target_link_libraries(test_gmm_viz ${PROJECT_LIBRARIES})
# target_link_libraries(test_viz_feasibility ${PROJECT_LIBRARIES})