# add_executable(test_generate_general_hand_trajectory test_generate_general_hand_trajectory.cpp ${PROJECT_SOURCES})
# add_executable(test_visualize_val_and_custom_trajectory test_visualize_val_and_custom_trajectory.cpp ${PROJECT_SOURCES})
add_executable(test_generate_lifting_and_turning_hand_trajectory test_generate_lifting_and_turning_hand_trajectory.cpp ${PROJECT_SOURCES})
add_executable(test_visualize_val_and_lift_turn_trajectory test_visualize_val_and_lift_turn_trajectory.cpp ${PROJECT_SOURCES})
# add_executable(test_generate_door_opening_hand_trajectory test_generate_door_opening_hand_trajectory.cpp ${PROJECT_SOURCES})
# add_executable(test_visualize_val_and_door_open_trajectory test_visualize_val_and_door_open_trajectory.cpp ${PROJECT_SOURCES})

# target_link_libraries(test_generate_general_hand_trajectory ${PROJECT_LIBRARIES})
# target_link_libraries(test_visualize_val_and_custom_trajectory ${PROJECT_LIBRARIES})
target_link_libraries(test_generate_lifting_and_turning_hand_trajectory ${PROJECT_LIBRARIES})
target_link_libraries(test_visualize_val_and_lift_turn_trajectory ${PROJECT_LIBRARIES})
# target_link_libraries(test_generate_door_opening_hand_trajectory ${PROJECT_LIBRARIES})
# target_link_libraries(test_visualize_val_and_door_open_trajectory ${PROJECT_LIBRARIES})

# add_dependencies(test_generate_door_opening_hand_trajectory ${${PROJECT_NAME}_EXPORTED_TARGETS})
# add_dependencies(test_visualize_val_and_door_open_trajectory ${${PROJECT_NAME}_EXPORTED_TARGETS})