# add_executable(test_data_saver test_data_saver.cpp ${PROJECT_SOURCES})
# add_executable(test_rkf45 test_rkf45.cpp ${PROJECT_SOURCES})
# add_executable(test_yaml_emitter test_yaml_emitter.cpp ${PROJECT_SOURCES})
# add_executable(test_cpp_NN test_cpp_NN.cpp ${PROJECT_SOURCES})

# target_link_libraries(test_rkf45 ${PROJECT_LIBRARIES})
# target_link_libraries(test_data_saver ${PROJECT_LIBRARIES})
# target_link_libraries(test_yaml_emitter ${PROJECT_LIBRARIES})
# target_link_libraries(test_cpp_NN ${PROJECT_LIBRARIES})

# add_dependencies(test_rkf45 ${${PROJECT_NAME}_EXPORTED_TARGETS})
# add_dependencies(test_data_saver ${${PROJECT_NAME}_EXPORTED_TARGETS})
# add_dependencies(test_yaml_emitter ${${PROJECT_NAME}_EXPORTED_TARGETS})
# add_dependencies(test_cpp_NN ${${PROJECT_NAME}_EXPORTED_TARGETS})
