# add_executable(test_config_trajectory_generator test_config_trajectory_generator.cpp ${PROJECT_SOURCES})
# add_executable(test_ik_module test_ik_module.cpp ${PROJECT_SOURCES})
# add_executable(test_ik_objectcollision test_ik_objectcollision.cpp ${PROJECT_SOURCES})
# add_executable(test_ik_selfcollision test_ik_selfcollision.cpp ${PROJECT_SOURCES})
# add_executable(test_prioritized_ik test_prioritized_ik.cpp ${PROJECT_SOURCES})
# add_executable(test_walking_pattern_generator test_walking_pattern_generator.cpp ${PROJECT_SOURCES})
add_executable(test_ik_multipleobject test_ik_multipleobject.cpp ${PROJECT_SOURCES})


# target_link_libraries(test_config_trajectory_generator ${PROJECT_LIBRARIES})
# target_link_libraries(test_ik_module ${PROJECT_LIBRARIES})
# target_link_libraries(test_ik_objectcollision ${PROJECT_LIBRARIES})
# target_link_libraries(test_ik_selfcollision ${PROJECT_LIBRARIES})
# target_link_libraries(test_prioritized_ik ${PROJECT_LIBRARIES})
# target_link_libraries(test_walking_pattern_generator ${PROJECT_LIBRARIES})
target_link_libraries(test_ik_multipleobject ${PROJECT_LIBRARIES})